few small updates

--- a/sass/03-regions/_our-pets.scss
+++ b/sass/03-regions/_our-pets.scss
@@ -12,6 +12,7 @@
     "reuen";
 
   justify-items: center;
+  margin-bottom: 5rem;
 
   @include respond(tablet) {
     grid-template-columns: repeat(2, 1fr);
