--- a/templates/partials/front-page/pups-expected.html.twig
+++ b/templates/partials/front-page/pups-expected.html.twig
@@ -1,32 +1,7 @@
-{# #}
+{#
+/**
+ * @file
+*/ 
+#}
 
 {{ page.pupsexpected }}
-
-
-{# <section class="pups-expected panel-wide">
-
-        <div class="panel-wide__img">
-            <img src="{{ base_path ~ directory }}/images/pups.jpg" alt="Bullensteeg Pups">
-        </div>
-
-        <div class="panel-wide__wrapper">
-
-            <div class="pups-expected__title">
-                <div class="heading">
-                    Pups verwacht
-                </div>
-            </div>
-
-            <div class="pups-expected__teaser-content">
-                De Bullensteeg Pepper en Bandit From Fortunebulls
-            </div>
-
-            <div class="read-more u-flex-align-right">
-                <a href="page_pups-expected.html" class="read-more__link">Lees meer</a>
-            </div>
-
-        </div>
-
-        <div class="panel-wide__bcg"></div>
-
-    </section> #}
