--- a/templates/partials/shared/navigation.html.twig
+++ b/templates/partials/shared/navigation.html.twig
@@ -13,22 +13,22 @@
                               <div class="navigation__items">
                                   <ul class="navigation__list">
                                       <li class="navigation__item">
-                                          <a href="{{ path('<front>') }}" class="navigation__link">Home</a>
+                                          <a href="{{ path('<front>') }}" class="navigation__link">{{ "Home"|t }}</a>
                                       </li>
                                       <li class="navigation__item">
-                                          <a href="{{base_path}}onze-teven" class="navigation__link">Teven</a>
+                                          <a href="{{ base_path }}onze-teven" class="navigation__link">{{ "Teven"|t }}</a>
                                       </li>
                                       <li class="navigation__item">
-                                          <a href="{{base_path}}onze-reuen" class="navigation__link">Reuen</a>
+                                          <a href="{{ base_path }}onze-reuen" class="navigation__link">{{ "Reuen"|t }}</a>
                                       </li>
                                       <li class="navigation__item">
-                                          <a href="{{base_path}}onze-pups" class="navigation__link">Pups</a>
+                                          <a href="{{ base_path }}onze-pups" class="navigation__link">{{ "Pups"|t }}</a>
                                       </li>
                                       <li class="navigation__item">
-                                          <a href="#" class="navigation__link">Foto's</a>
+                                          <a href="#" class="navigation__link">{{ "Foto's"|t }}</a>
                                       </li>
                                       <li class="navigation__item">
-                                          <a href="#" class="navigation__link">Nieuws</a>
+                                          <a href="{{ base_path }}nieuws" class="navigation__link">{{ "Nieuws"|t }}</a>
                                       </li>
                                   </ul>
                               </div>
@@ -52,22 +52,22 @@
                             <div class="navigation__items--desktop">
                                 <ul class="navigation__list">
                                     <li class="navigation__item--desktop">
-                                        <a href="{{ path('<front>') }}" class="navigation__link--desktop">Home</a>
+                                        <a href="{{ path('<front>') }}" class="navigation__link--desktop">{{ "Home"|t }}</a>
                                     </li>
                                     <li class="navigation__item--desktop">
-                                        <a href="{{base_path}}onze-teven" class="navigation__link--desktop">Teven</a>
+                                        <a href="{{ base_path }}onze-teven" class="navigation__link--desktop">{{ "Teven"|t }}</a>
                                     </li>
                                     <li class="navigation__item--desktop">
-                                        <a href="{{base_path}}onze-reuen" class="navigation__link--desktop">Reuen</a>
+                                        <a href="{{ base_path }}onze-reuen" class="navigation__link--desktop">{{ "Reuen"|t }}</a>
                                     </li>
                                     <li class="navigation__item--desktop">
-                                        <a href="{{base_path}}onze-pups" class="navigation__link--desktop">Pups</a>
+                                        <a href="{{ base_path }}onze-pups" class="navigation__link--desktop">{{ "Pups"|t }}</a>
                                     </li>
                                     <li class="navigation__item--desktop">
-                                        <a href="#" class="navigation__link--desktop">Foto's</a>
+                                        <a href="#" class="navigation__link--desktop">{{ "Foto's"|t }}</a>
                                     </li>
                                     <li class="navigation__item--desktop">
-                                        <a href="#" class="navigation__link--desktop">Nieuws</a>
+                                <a href="{{ base_path }}nieuws" class="navigation__link--desktop">{{ "Nieuws"|t }}</a>
                                     </li>
                                 </ul>
                             </div>
