news on frontpage and news page

--- a/templates/partials/front-page/news.html.twig
+++ b/templates/partials/front-page/news.html.twig
@@ -1,28 +1,7 @@
-{# #}
+{#
+/**
+ * @file
+ */
+#}
 
-<section class="news panel-wide">
-
-            <div class="panel-wide__img">
-                <img src="{{ base_path ~ directory }}/images/for_html/mystic.jpg" alt="news">
-            </div>
-
-            <div class="panel-wide__wrapper">
-                <h2 class="heading heading-second u-margin-top">
-                    In memoriam
-                </h2>
-                <div class="panel-wide__content">
-                    <p>
-                        Jij mooie meid met je ogen die altijd heel attent me overal volgde.
-                    </p>
-                    <p>
-                        Je hebt me doen verschieten om plots van ons heen te gaan.
-                    </p>
-                </div>
-                <div class="read-more u-flex-align-right">
-                    <a href="#" class="read-more__link">Lees meer</a>
-                </div>
-            </div>
-
-            <div class="panel-wide__bcg"></div>
-
-</section>
+{{ page.news }}
