our-pups and news to compoment panel

--- a/sass/04-components/_components-dir.scss
+++ b/sass/04-components/_components-dir.scss
@@ -5,6 +5,8 @@
 @import "buttons";
 @import "readmore";
 @import "panels";
+@import "pnl-right";
+@import "pnl-image-field";
 @import "contact-details";
 @import "site-name";
 @import "menu";
