--- a/templates/content/node--news--full.html.twig
+++ b/templates/content/node--news--full.html.twig
@@ -31,7 +31,7 @@
   <div class="pnl-right__text">
     <div class="pnl-right__text-content-wrap">
       <div class="pnl-right__text-content-title">
-        <h2 class="heading heading-second heading-second--taller">
+        <h2 class="heading heading-second heading-second--taller heading-second--mb-none">
           {{ label }}
         </h2>
       </div>
