--- a/templates/content/node--news--blog.html.twig
+++ b/templates/content/node--news--blog.html.twig
@@ -22,7 +22,7 @@
   <div class="blog">
   
     <div class="blog__title">
-      <a href="{{ url }}" rel="bookmark">{{ label }}</a>
+      <a class="heading-second" href="{{ url }}" rel="bookmark">{{ label }}</a>
     </div>
     <div class="blog__body">
       <div class="blog__text">
