--- a/templates/field/field--field-news-img.html.twig
+++ b/templates/field/field--field-news-img.html.twig
@@ -26,7 +26,7 @@
 {% if label_hidden %}
   {% if multiple %}
     {% for item in items %}
-      <div{{ item.attributes.addClass('pnl__img-field') }}>{{ item.content }}</div>
+      <div{{ item.attributes.addClass('pnl__img-field pnl__img-field--scale pnl__img-field--border') }}>{{ item.content }}</div>
     {% endfor %}
   {% else %}
     {% for item in items %}
