still more tweeks for news lay-out

--- a/sass/04-components/_pnl-right.scss
+++ b/sass/04-components/_pnl-right.scss
@@ -73,6 +73,10 @@
       &-content-title {
         align-self: center;
       }
+
+      &-content-body {
+        align-self: center;
+      }
   
       @include respond(desktop) {
         grid-column: 2 / -1;
