--- a/templates/content/node--news--teaser.html.twig
+++ b/templates/content/node--news--teaser.html.twig
@@ -23,11 +23,11 @@
 {{ attach_library('classy/node') }}
 <article{{ attributes.addClass(classes) }}>
 
-<div class="panel-wide__img">
+<div class="panel-wide__img wow slideInLeft" data-wow-duration="1s">
   {{ content.field_news_img.0 }}
 </div>
 
-  <div class="panel-wide__wrapper">
+  <div class="panel-wide__wrapper wow slideInUp" data-wow-duration="1.5s">
 
     <h2 class="heading heading-second u-margin-top">
       {{ label }}
@@ -39,7 +39,7 @@
 
     <div class="read-more u-flex-align-right">
       {% if bodytext|length > 130 %}
-        <a href="{{ url }}" class="read-more__link">Lees meer</a>
+        <a href="{{ url }}" class="read-more__link">{{ "Lees meer"|t }}</a>
       {% endif %}
     </div>
 
@@ -48,31 +48,3 @@
     <div class="panel-wide__bcg"></div> 
 
 </article>
-
-
-{# 
-<div class="panel-wide__img">
-  <img src="{{ base_path ~ directory }}/images/for_html/mystic.jpg" alt="news">
-</div>
-
-<div class="panel-wide__wrapper">
-  <h2 class="heading heading-second u-margin-top">
-    In memoriam
-  </h2>
-  <div class="panel-wide__content">
-    <p>
-      Jij mooie meid met je ogen die altijd heel attent me overal volgde.
-    </p>
-    <p>
-      Je hebt me doen verschieten om plots van ons heen te gaan.
-    </p>
-  </div>
-  <div class="read-more u-flex-align-right">
-    <a href="#" class="read-more__link">Lees meer</a>
-  </div>
-  </div>
-
-  <div class="panel-wide__bcg"></div> 
-  
-#}
-
