--- a/templates/layout/page--front.html.twig
+++ b/templates/layout/page--front.html.twig
@@ -1,3 +1,13 @@
+{#
+/**
+ * @file
+ * Theme override to display a single page.
+ */
+#}
+
+{{ attach_library('bullensteeg/frontjs') }}
+{{ attach_library('bullensteeg/animatestyle') }}
+
 <header class="header">
 
     <div class="container">
