--- a/templates/partials/front-page/our-pets.html.twig
+++ b/templates/partials/front-page/our-pets.html.twig
@@ -1,31 +1,44 @@
-{# #}
+{#
+/**
+ * @file
+ *
+ */
+#}
 
 <section class="our-pets u-negative-margin-top">
 
             <div class="our-pets__teven panel">
 
-                <div class="teven__img">
+                <div class="teven__img wow slideInUp" data-wow-duration="1s">
                     <img src="{{ base_path ~ directory }}/images/for_html/teef1.JPG" alt="">
                 </div>
                 <div class="panel__inner">
-                    <span class="site__name site__name--small u-margin-bottom">BULLENSTEEG</span>
-                    <h2 class="heading heading-second">Onze Teven</h2>
+                    <span class="site__name site__name--small u-margin-bottom">
+                    {{ site_name }}
+                    </span>
+                    <h2 class="heading heading-second">{{ "Onze Teven"|t }}</h2>
                     <div class="read-more u-flex-align-right">
-                        <a href="{{base_path}}onze-teven" class="read-more__link">Lees meer</a>
+                        <a href="{{base_path}}onze-teven" class="read-more__link">
+                        {{ "Lees meer"|t }}
+                    </a>
                     </div>
                 </div>
 
             </div>
 
             <div class="our-pets__reuen panel">
-                <div class="reuen__img">
+                <div class="reuen__img wow slideInUp" data-wow-duration="1s">
                     <img src="{{ base_path ~ directory }}/images/for_html/reu.JPG" alt="">
                 </div>
                 <div class="panel__inner">
-                    <span class="site__name site__name--small u-margin-bottom">BULLENSTEEG</span>
-                    <h2 class="heading heading-second">Onze Reuen</h2>
+                    <span class="site__name site__name--small u-margin-bottom">
+                      {{ site_name }}
+                    </span>
+                    <h2 class="heading heading-second">{{ "Onze Reuen"|t }}</h2>
                     <div class="read-more u-flex-align-right">
-                        <a href="{{base_path}}onze-reuen" class="read-more__link">Lees meer</a>
+                        <a href="{{base_path}}onze-reuen" class="read-more__link">
+                          {{ "Lees meer"|t }}
+                        </a>
                     </div>
                 </div>
 
