a few little modifications

--- a/templates/partials/shared/navigation.html.twig
+++ b/templates/partials/shared/navigation.html.twig
@@ -38,7 +38,7 @@
                                       <img src="{{ base_path ~ directory }}/images/marleen.jpg" alt="">
                                   </div>
                                   <div class="navigation__site-name">
-                                      De Bullensteeg
+                                      {{ site_name }}
                                   </div>
                               </div>
 
