photo album added and a few minor tweeks

--- a/sass/05-content/_content_pups-expected.scss
+++ b/sass/05-content/_content_pups-expected.scss
@@ -1,6 +1,6 @@
 // /////////////////////////////
 // @@ CONTENT PUPS EXPECTED 
-// ////////////////////////////@include
+// /////////////////////////////
 
 .pups-expected-content {
   width: 80vw;
