--- a/sass/04-components/_panels.scss
+++ b/sass/04-components/_panels.scss
@@ -46,6 +46,9 @@
     grid-row: 1 / 2;
     order: 1;
 
+    // This for the wow animation
+    z-index: 999;
+
     @include respond(desktop) {
       grid-column: 1 / 3;
       grid-row: 1 / 3;
@@ -87,6 +90,9 @@
 
     box-shadow: $panel-shadow;
     background: $white;
+
+    // This for the wow animation
+    z-index: -999;
   }
 }
 
