--- a/templates/partials/shared/navigation.html.twig
+++ b/templates/partials/shared/navigation.html.twig
@@ -25,7 +25,7 @@
                                           <a href="{{ base_path }}onze-pups" class="navigation__link">{{ "Pups"|t }}</a>
                                       </li>
                                       <li class="navigation__item">
-                                          <a href="#" class="navigation__link">{{ "Foto's"|t }}</a>
+                                          <a href="{{ base_path }}foto-album" class="navigation__link">{{ "Foto's"|t }}</a>
                                       </li>
                                       <li class="navigation__item">
                                           <a href="{{ base_path }}nieuws" class="navigation__link">{{ "Nieuws"|t }}</a>
@@ -64,7 +64,7 @@
                                         <a href="{{ base_path }}onze-pups" class="navigation__link--desktop">{{ "Pups"|t }}</a>
                                     </li>
                                     <li class="navigation__item--desktop">
-                                        <a href="#" class="navigation__link--desktop">{{ "Foto's"|t }}</a>
+                                        <a href="{{ base_path }}foto-album" class="navigation__link--desktop">{{ "Foto's"|t }}</a>
                                     </li>
                                     <li class="navigation__item--desktop">
                                 <a href="{{ base_path }}nieuws" class="navigation__link--desktop">{{ "Nieuws"|t }}</a>
