--- a/templates/layout/page.html.twig
+++ b/templates/layout/page.html.twig
@@ -47,14 +47,14 @@
 
 <div class='container'>
 
-{{ page.pupsexpected }}
+  {{ page.pupsexpected }}
 
-{{ page.help }}
+  {{ page.help }}
 
   <main role="main">
     <a id="main-content" tabindex="-1"></a>{# link is in html.html.twig #}
 
-    <div class="layout-content">
+    <div class="page-content">
       {{ page.content }}
     </div>{# /.layout-content #}
   </main>
@@ -62,6 +62,3 @@
 </div>
 
 {% include directory ~ '/templates/partials/shared/footer.html.twig' %}
-  
-
-
