--- a/sass/04-components/_components-dir.scss
+++ b/sass/04-components/_components-dir.scss
@@ -6,6 +6,7 @@
 @import "readmore";
 @import "panels";
 @import "pnl-right";
+@import "pnl-center";
 @import "pnl-image-field";
 @import "contact-details";
 @import "site-name";
