--- a/templates/partials/shared/footer.html.twig
+++ b/templates/partials/shared/footer.html.twig
@@ -6,7 +6,31 @@
             <div class="sub-footer">
 
                 <div class="sub-footer__btn-contact">
-                    <a href="#" class="btn btn--green u-align-center u-full-width">Contacteer mij</a>
+                    
+                    
+                    <script type="text/javascript" language="javascript">
+
+                    { coded = "Xjg1JJhSj11Jh0@0Xj41.wQX"
+                    key = "qDcpzYtJCRdyvIFimSGV30oNHBwa75KnLlurZfO4X8W2UeQ6TE9jsAkhb1MgxP"
+                    shift=coded.length
+                    link=""
+                    for (i=0; i<coded.length; i++) {
+                        if (key.indexOf(coded.charAt(i))==-1) {
+                        ltr = coded.charAt(i)
+                        link += (ltr)
+                        }
+                        else {     
+                        ltr = (key.indexOf(coded.charAt(i))-shift+key.length) % key.length
+                        link += (key.charAt(ltr))
+                        }
+                    }
+                      document.write("<a class='btn btn--green u-align-center u-full-width' href='mailto:"+link+"'>Contacteer mij</a>")
+                    }
+                    
+                    </script>
+                    
+                    <noscript>Sorry, je hebt Javascript om mij te contacteren.</noscript>
+
                 </div>
 
                 <div class="sub-footer__contact-details">
