contact info in footer and header

--- a/sass/03-regions/_footer.scss
+++ b/sass/03-regions/_footer.scss
@@ -42,6 +42,16 @@
 
     line-height: 3rem;
   }
+
+  &__name {
+    margin-bottom: 2rem;
+
+    @include respond(tablet) {
+      margin-bottom: 0;
+    }
+  }
+
+  &__phone {}
 }
 
 .footer {
