--- a/sass/04-components/_components-dir.scss
+++ b/sass/04-components/_components-dir.scss
@@ -8,7 +8,7 @@
 @import "pnl-right";
 @import "pnl-center";
 @import "pnl-image-field";
-@import "contact-details";
 @import "site-name";
 @import "menu";
 @import "pager";
+@import "phone";
