--- a/sass/03-regions/_header_front-page.scss
+++ b/sass/03-regions/_header_front-page.scss
@@ -57,7 +57,6 @@
   &__slogan {
     grid-area: slogan;
     margin: 4rem 0 6rem;
-    // max-width: 50vw;
 
     @include respond(tablet) {
       grid-column: 1 / -1;
@@ -70,22 +69,10 @@
     display: block;
     grid-area: cta;
 
-
     @include respond(tablet) {
-      display: none;
-    }
-
-  }
-
-  &__cta--desktop {
-    display: none;
-
-    @include respond(tablet) {
-      display: block;
       grid-column: 1 / 3;
       grid-row: 2 / 3;
     }
-
   }
 
 
@@ -101,4 +88,22 @@
     }
   }
 
+}
+
+.contact-details {
+  grid-area: contact;
+  line-height: 3rem;
+
+  @include respond(tablet) {
+    display: none;
+  }
+
+  &--green {
+    background: $green-lighter;
+  }
+
+  &--full-width {
+    width: 100%;
+  }
+  
 }
