--- a/templates/partials/shared/footer.html.twig
+++ b/templates/partials/shared/footer.html.twig
@@ -1,51 +1,35 @@
-{# #}
+{# 
+/**
+ * @file
+ * 
+ */
+#}
 
 <footer class="footer-wrapper">
-        <div class="container">
+  <div class="container">
 
-            <div class="sub-footer">
+    <div class="sub-footer">
 
-                <div class="sub-footer__btn-contact">
-                    
-                    
-                    <script type="text/javascript" language="javascript">
+      <div class="sub-footer__btn-contact">
+        <script>
+          {% include directory ~ '/js/email_spam.js' %}   
+        </script>
+                       
+        <noscript>{{ "Sorry, je hebt Javascript om mij te contacteren."|t }}</noscript>
+      </div>
 
-                    { coded = "Xjg1JJhSj11Jh0@0Xj41.wQX"
-                    key = "qDcpzYtJCRdyvIFimSGV30oNHBwa75KnLlurZfO4X8W2UeQ6TE9jsAkhb1MgxP"
-                    shift=coded.length
-                    link=""
-                    for (i=0; i<coded.length; i++) {
-                        if (key.indexOf(coded.charAt(i))==-1) {
-                        ltr = coded.charAt(i)
-                        link += (ltr)
-                        }
-                        else {     
-                        ltr = (key.indexOf(coded.charAt(i))-shift+key.length) % key.length
-                        link += (key.charAt(ltr))
-                        }
-                    }
-                      document.write("<a class='btn btn--green u-align-center u-full-width' href='mailto:"+link+"'>Contacteer mij</a>")
-                    }
-                    
-                    </script>
-                    
-                    <noscript>Sorry, je hebt Javascript om mij te contacteren.</noscript>
+      {# Block region contact information - content type 'aboutme'  #}
 
-                </div>
+      {{ page.contactinfo }}
+      
 
-                <div class="sub-footer__contact-details">
-                    Marleen Halleng
-                    <br> marleenhalleng@gmail.com
-                    <br> Tel: (+32) 497 239 743
-                </div>
+    </div>
+    <!-- end sub-footer -->
 
-            </div>
-            <!-- end sub-footer -->
+    <div class="footer">
+      Copyright © {{ "now"|date("Y") }} | {{ site_name }} - <a href="#">Privacy Policy</a>
+    </div>
 
-            <div class="footer">
-                Copyright © 2018 | BULLENSTEEG - Privacy Policy
-            </div>
-
-        </div>
+  </div>
 
 </footer>
