bug mail script for now disabled in header and footer

--- a/templates/partials/front-page/header-front.html.twig
+++ b/templates/partials/front-page/header-front.html.twig
@@ -15,9 +15,9 @@
 </div>
 
   <div class="header__cta">
-    <script>
+    {# <script>
       {% include directory ~ '/js/email_spam-header.js' %}   
-    </script>
+    </script> #}
                        
     <noscript>{{ "Sorry, je hebt Javascript om mij te contacteren."|t }}</noscript>
   </div>
