--- a/templates/partials/shared/footer.html.twig
+++ b/templates/partials/shared/footer.html.twig
@@ -11,9 +11,9 @@
     <div class="sub-footer">
 
       <div class="sub-footer__btn-contact">
-        <script>
+        {# <script>
           {% include directory ~ '/js/email_spam.js' %}   
-        </script>
+        </script> #}
                        
         <noscript>{{ "Sorry, je hebt Javascript om mij te contacteren."|t }}</noscript>
       </div>
