another spam e-mail script added

--- a/templates/content/node--contact-info.html.twig
+++ b/templates/content/node--contact-info.html.twig
@@ -23,9 +23,12 @@
     {{ content.field_aboutme_name }}
   </div>
 
-  <div class="sub-footer__phone")>
+  <div class="sub-footer__phone">
     <a class="phone btn--green" href="tel:{{ content.field_aboutme_phone }}"> {{ content.field_aboutme_label_phone}}</a>
     <div class="phone--desktop" {{ content.field_aboutme_label_phone}}
   </div>
-
+  {# <div class="sub-footer__email">
+    {{ content.field_aboutme_email }}
+  </div> #}
+  
 </article>
