--- a/templates/content/node--our-pets--full.html.twig
+++ b/templates/content/node--our-pets--full.html.twig
@@ -38,12 +38,12 @@
 
       <div class="parent-wrapper">
         <div class="parent">
-          <div class="parent__label">{{ 'Naam moeder: '|t }}</div>
+          <div class="parent__label">{{ 'Moeder: '|t }}</div>
           {{ content.field_ourpets_mom }}          
         </div>
 
         <div class="parent">
-          <div class="parent__label">{{ 'Naam vader: '|t }}</div>
+          <div class="parent__label">{{ 'Vader: '|t }}</div>
           {{ content.field_ourpets_dad }}          
         </div>     
       </div>
