--- a/sass/03-regions/_regions-dir.scss
+++ b/sass/03-regions/_regions-dir.scss
@@ -3,6 +3,7 @@
 // ////////////////////////
 
 @import "header_front-page";
+@import "maintenance-content";
 @import "navigation";
 @import "aboutus";
 @import "pups-expected";
