--- a/templates/layout/maintenance-page.html.twig
+++ b/templates/layout/maintenance-page.html.twig
@@ -29,7 +29,7 @@
           <img src="{{ base_path ~ directory }}/images/front-img.jpg" alt="Bullensteeg groepsfoto">
         </div>
 
-        <div class="header__slogan">
+        <div class="header__title">
           <h1 class="heading-first">
             Franse bulldoggen,<br> grote liefde,<br> passie en hobby.
           </h1>
