navigation further improved

--- a/sass/03-regions/_nav-desktop.scss
+++ b/sass/03-regions/_nav-desktop.scss
@@ -1,9 +1,8 @@
 // //////////////////////////////
-// @@ NAVIGATION  
+// @@ NAVIGATION DESKTOP
 // //////////////////////////////
 
 .navigation {
-
 
   &__nav--desktop {
     display: none;
