--- a/sass/03-regions/_regions-dir.scss
+++ b/sass/03-regions/_regions-dir.scss
@@ -4,7 +4,8 @@
 
 @import "header_front-page";
 @import "maintenance-content";
-@import "navigation";
+@import "nav-desktop";
+@import "nav-mobile";
 @import "aboutus";
 @import "pups-expected";
 @import "our-pets";
