--- a/sass/04-components/_components-dir.scss
+++ b/sass/04-components/_components-dir.scss
@@ -9,6 +9,6 @@
 @import "pnl-center";
 @import "pnl-image-field";
 @import "site-name";
-@import "menu";
+@import "menu-btn";
 @import "pager";
 @import "phone";
