--- a/templates/navigation/nav--desktop.html.twig
+++ b/templates/navigation/nav--desktop.html.twig
@@ -1,10 +1,10 @@
 {# 
-/**
+ /**
  * include for navigation.html.twig
  * navigation desktop
- * 
-*/
- #}
+ * _nav-desktop.scss
+ */
+#}
 
 <nav class="navigation__nav--desktop">
   <div class="navigation__items--desktop">
