--- a/templates/navigation/navigation.html.twig
+++ b/templates/navigation/navigation.html.twig
@@ -1,3 +1,11 @@
+{# 
+ /**
+ * include for navigation.html.twig
+ * navigation region
+ * 
+ */
+#}
+
 <div class="header__menu">
 
   <div class="navigation">
