--- a/templates/partials/front-page/our-pets.html.twig
+++ b/templates/partials/front-page/our-pets.html.twig
@@ -1,17 +1,18 @@
 {#
 /**
  * @file
- *
+ * _our-pets.scss
  */
 #}
 
-<section class="our-pets u-negative-margin-top">
+<section class="our-pets u-negative-big-margin-top">
 
             <div class="our-pets__teven panel">
 
                 <div class="teven__img wow slideInUp" data-wow-duration="1s">
                     <img src="{{ base_path ~ directory }}/images/for_html/teef1.JPG" alt="">
                 </div>
+                
                 <div class="panel__inner">
                     <span class="site__name site__name--small u-margin-bottom">
                     {{ site_name }}
