--- a/sass/01-base/_typography.scss
+++ b/sass/01-base/_typography.scss
@@ -10,6 +10,10 @@ body {
   line-height: 2.5rem;
 }
 
+h1 {
+  line-height: 4rem;
+}
+
 .heading {
   font-family: $font-family--heading;
   font-weight: $tw-bold;
