--- a/sass/00-abstracts/_variables.scss
+++ b/sass/00-abstracts/_variables.scss
@@ -24,6 +24,6 @@ $tw-bold: 900;
 $tw-semi-bold: 700;
 $tw-default: 400;
 
-//
+// PANELS
 $panel-shadow: 0 4px 8px 0 rgba($black-gunmetal, 0.1), 0 6px 20px 0 rgba($black-gunmetal, 0.1);
 $panal-shadow-more: 0 4px 8px 0 rgba($black-gunmetal, 0.5), 0 6px 20px 0 rgba($black-gunmetal, 0.1);
