the home overlay section aboutus and our-pets

--- a/sass/01-base/_utilities.scss
+++ b/sass/01-base/_utilities.scss
@@ -19,7 +19,10 @@
 }
 
 .u-negative-big-margin-top {
-  margin-top: -10rem;
+  margin-top: -12rem;
+  @include respond(tablet) {
+    // margin-top: -10rem;
+  }  
 }
 
 .u-margin-bottom {
