--- a/templates/partials/front-page/our-pets.html.twig
+++ b/templates/partials/front-page/our-pets.html.twig
@@ -4,14 +4,14 @@
  * _our-pets.scss
  */
 #}
+<div class="container our-pets__region">
+  <section class="our-pets u-negative-big-margin-top">
 
-<section class="our-pets u-negative-big-margin-top">
+    <div class="our-pets__teven panel">
 
-            <div class="our-pets__teven panel">
-
-                <div class="teven__img wow slideInUp" data-wow-duration="1s">
-                    <img src="{{ base_path ~ directory }}/images/for_html/teef1.JPG" alt="">
-                </div>
+      <div class="teven__img wow slideInUp" data-wow-duration="1s">
+        <img src="{{ base_path ~ directory }}/images/for_html/teef1.JPG" alt="">
+      </div>
                 
                 <div class="panel__inner">
                     <span class="site__name site__name--small u-margin-bottom">
@@ -40,9 +40,10 @@
                         <a href="{{base_path}}onze-reuen" class="read-more__link">
                           {{ "Lees meer"|t }}
                         </a>
-                    </div>
-                </div>
+        </div>
+      </div>
 
-            </div>
+    </div>
 
-</section>
+  </section>
+</div>
