--- a/sass/03-regions/_aboutus.scss
+++ b/sass/03-regions/_aboutus.scss
@@ -3,11 +3,12 @@
 // ////////////////////////
 
 .aboutus {
+  display: grid;
+  grid-template-columns: 1fr 5fr 1fr;
+  grid-template-rows: repeat(3, auto);
+
   margin-bottom: 9rem;
   z-index: 1;
-
-  display: grid;
-  grid-template-columns: 1fr;
 
   @include respond(tablet) {
     margin-top: -10rem;
@@ -16,22 +17,29 @@
   }
 
   &__img {
+    grid-column: 1 / -1;
+    grid-row: 1 / 2;
+
     margin-bottom: 6rem;
+    z-index: 3;
 
     @include respond(tablet) {
       grid-column: 1 / 3;
       grid-row: 2 / 3;
-      z-index: 3;
     }
   }
 
   &__text {
-    width: 80vw;
-    margin: 0 auto;
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+
+    padding-bottom: 9rem;
     z-index: 3;
 
     @include respond(tablet) {
       width: auto;
+      // padding-bottom: 5rem;
+
       grid-column: 4 / 5;
       grid-row: 2 / 3;
       align-self: center;
@@ -40,11 +48,13 @@
   }
 
   &__bcg {
-    display: none;
-    background: $white;
+    grid-column: 1 / -1;
+    grid-row: 1 / 3;
 
-    @include respond(tablet) {
-      display: block;
+    background: $white;
+    z-index: 0;
+
+    @include respond(tablet) {;
       grid-column: 2 / -1;
       grid-row: 1 / -1;
     }
