--- a/templates/layout/page.html.twig
+++ b/templates/layout/page.html.twig
@@ -47,7 +47,7 @@
   {% include directory ~ '/templates/partials/page/header.html.twig' %}
 
   <div class='container'>
-
+    {# This block only on 'onze_pups' page #}
     {{ page.pupsexpected }}
 
     {{ page.help }}
