Privacy url added to menu and footer link

--- a/templates/partials/shared/footer.html.twig
+++ b/templates/partials/shared/footer.html.twig
@@ -28,7 +28,7 @@
     <!-- end sub-footer -->
 
     <div class="footer">
-      Copyright © {{ "now"|date("Y") }} | {{ site_name }} - <a href="#">Privacy Policy</a>
+      Copyright © {{ "now"|date("Y") }} | {{ site_name }} - <a href="{{ base_path }}privacyverklaring">Privacy Policy</a>
     </div>
 
   </div>
