--- a/templates/navigation/nav--mobile.html.twig
+++ b/templates/navigation/nav--mobile.html.twig
@@ -47,7 +47,7 @@
     </div>
 
     <div class="navigation__footer">
-      <a href="#" class="navigation__footer-link">Privacy</a>
+      <a href="{{ base_path }}privacyverklaring" class="navigation__footer-link">Privacy</a>
     </div>
 
 </nav>
