navigation links with counter and from flex to grid

--- a/sass/00-abstracts/_variables.scss
+++ b/sass/00-abstracts/_variables.scss
@@ -7,8 +7,10 @@
 $green-main: #139A43;
 $green-lighter: #16DB93;
 $white_anti-flash: #EAF2EF;
+$white_anti-flash--darker: #939B98;
 $white: #FFFFFF;
 $black_gunmetal: #2C363F;
+$black_gunmetal--lighter: #354049;
 $gray-spanish: #969A97;
 
 // FONTS
