--- a/sass/03-regions/_nav-mobile.scss
+++ b/sass/03-regions/_nav-mobile.scss
@@ -29,7 +29,7 @@
     grid-template-columns: 1fr;
     grid-template-rows: repeat(2, auto) 5rem;
     grid-template-areas:
-      "nav-items"
+      "nav-wrap"
       "nav-branding"
       "nav-footer";
 
@@ -37,7 +37,7 @@
       grid-template-columns: 1fr 1fr;
       grid-template-rows: auto 5rem;
       grid-template-areas: 
-        "nav-items nav-branding"
+        "nav-wrap nav-branding"
         "nav-footer nav-footer";
     }
   }
@@ -54,17 +54,19 @@
     right: 0;
   }
 
+  &__wrap {
+    grid-area: nav-wrap;
+
+    display: grid;
+    grid-template-columns: 1fr;
+    background: $black_gunmetal--lighter;
+
+  }
+
   &__items {
-    grid-area: nav-items;
-    width: 50vw;
-    margin: 0 auto;
-
-    display: flex;
-    align-items: center;
-
-    @include respond(phone) {
-      justify-content: center;
-    }
+    align-self: center;
+    justify-self: center;
+    text-align: center;
   }
 
   //navigation.html.twig
@@ -73,9 +75,12 @@
   }
 
   &__item {
+    font-size: 3rem;
+    
     &:not(:last-of-type) {
-      margin-bottom: 1.5rem;
+      margin-bottom: 3rem;
     }
+
   }
 
   &__link {
@@ -84,6 +89,16 @@
 
     &:hover {
       color: $green-main;
+    }
+
+    &::before {
+      counter-increment: link__counter;
+      content: counters(link__counter, "", decimal-leading-zero);
+      position: absolute;
+      font-size: $font-size-smaller;
+      top: 0;
+      left: -2rem;
+      color: $white_anti-flash--darker;
     }
   }
 
@@ -109,7 +124,7 @@
   }
 
   &__branding {
-    width: 90vw;
+    // width: 90vw;
     margin: 0 auto;
     
     grid-area: nav-branding;
