--- a/templates/navigation/nav--mobile.html.twig
+++ b/templates/navigation/nav--mobile.html.twig
@@ -8,29 +8,33 @@
  #}
 
 <nav class="navigation__nav">
-
-  <div class="navigation__items">
-    <ul class="navigation__list">
-      <li class="navigation__item">
-        <a href="{{ path('<front>') }}" class="navigation__link">{{ "Home"|t }}</a>
-      </li>
-      <li class="navigation__item">
-        <a href="{{ base_path }}onze-teven" class="navigation__link">{{ "Teven"|t }}</a>
-      </li>
-      <li class="navigation__item">
-        <a href="{{ base_path }}onze-reuen" class="navigation__link">{{ "Reuen"|t }}</a>
-      </li>
-      <li class="navigation__item">
-        <a href="{{ base_path }}onze-pups" class="navigation__link">{{ "Pups"|t }}</a>
-      </li>
-      <li class="navigation__item">
-        <a href="{{ base_path }}foto-album" class="navigation__link">{{ "Foto's"|t }}</a>
-      </li>
-      <li class="navigation__item">
-        <a href="{{ base_path }}nieuws" class="navigation__link">{{ "Nieuws"|t }}</a>
-      </li>
-    </ul>
+  <div class="navigation__wrap">
+  
+    <div class="navigation__items">
+      <ul class="navigation__list">
+        <li class="navigation__item">
+          <a href="{{ path('<front>') }}" class="navigation__link">{{ "Home"|t }}</a>
+        </li>
+        <li class="navigation__item">
+          <a href="{{ base_path }}foto-album" class="navigation__link">{{ "Foto's"|t }}</a>
+        </li>
+        <li class="navigation__item">
+          <a href="{{ base_path }}nieuws" class="navigation__link">{{ "Nieuws"|t }}</a>
+        </li>
+        <li class="navigation__item">
+          <a href="{{ base_path }}onze-pups" class="navigation__link">{{ "Onze Pups"|t }}</a>
+        </li>
+        <li class="navigation__item">
+          <a href="{{ base_path }}onze-teven" class="navigation__link">{{ "Bullensteeg Teven"|t }}</a>
+        </li>
+        <li class="navigation__item">
+          <a href="{{ base_path }}onze-reuen" class="navigation__link">{{ "Bullensteeg Reuen"|t }}</a>
+        </li>        
+      </ul>
+    </div>
+    
   </div>
+  
 
   <div class="navigation__branding">
     <div class="navigation__site-avatar">
